--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  
-"devDependencies": {
-  
-  
-"webpack": "^5.74.0",
-  
-  
-"webpack-cli": "^4.10.0"
-  
-}
+  "scripts": {
+    "prod": "NODE_ENV='production' webpack",
+    "dev": "webpack-dev-server",
+    "lint": "npx eslint 'src/**'"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
+  }
 }
