--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "scripts": {
     "prod": "NODE_ENV='production' webpack",
     "dev": "webpack-dev-server",
-    "lint": "npx eslint 'src/**'"
+    "lint": "eslint src/**/*.jsx"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -22,5 +23,9 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
